# sse-matrix

./: .gitignore  CMakeLists.txt  Matrix.hpp  copie-simd.cpp  matrix.hpp  multiply.cpp  multiply2.cpp  naive.cpp  test_macro.hpp  utils.hpp
